--- a/deploy.yaml
+++ b/deploy.yaml
@@ -3,13 +3,13 @@ kind: Deployment
 metadata:
   creationTimestamp: null
   labels:
-    app: evilpetclinic
-  name: evilpetclinic
+    app: pythondev
+  name: pythondev
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: evilpetclinic
+      app: pythondev
   strategy: {}
   template:
     metadata:
@@ -18,7 +18,7 @@ spec:
         app: evilpetclinic
     spec:
       containers:
-      - image: 10.96.172.47:5000/evilpetclinic:latest
+      - image: harbor-master-test.rbenavente.demo.twistlock.com/library/pythondev:latest
         name: evilpetclinic
         resources: {}
       imagePullSecrets:
